# ipow

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Readme.md  benchmark.cpp  ipow.hh  main.cpp  test.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
include/: ipow.hh
test/: CMakeLists.txt  test.cpp
